fixed footer alignment for mobile and desktop

--- a/apps/delivery-web/src/components/Footer/Footer.module.css
+++ b/apps/delivery-web/src/components/Footer/Footer.module.css
@@ -58,8 +58,9 @@
 }
 
 .divider {
-  border: 0.7px;
-  border-color: #939393;
+  align-self: center;
+  left: 12px;
+  border: 0.7px solid #939393;
 }
 
 .bottomContainer {
@@ -79,15 +80,6 @@
   align-items: flex-end;
 }
 
-.socialIconsContainer {
-  max-width: 107px;
-  display: flex;
-  align-items: center;
-  gap: 24px;
-  margin-top: 12px;
-  justify-content: flex-start;
-}
-
 
 .copyrightContainer {
   display: flex;
@@ -104,7 +96,7 @@
   color: #939393;
   text-align: center;
   padding: 6px 0;
-  margin-top: -4px;
+  margin-top: 14px;
 }
 
 @media (width <=768px) {
@@ -113,14 +105,17 @@
     width: 100%;
     flex-direction: row;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 16px;
     align-items: flex-start;
-    margin: 16px 0 0 0;
+    margin: 16px 0 7px 0;
     padding: 0 12px;
     margin-right: 12px;
   }
 
   .linksContainer {
+    flex: 1 1 auto;
+    min-width: 0;
     display: flex;
     flex-direction: row;
     gap: 0;
@@ -135,23 +130,24 @@
     padding: 0;
   }
 
-  .socialIconsContainer {
+  .socialContainer {
     display: flex;
-    flex-direction: row;
-    gap: 16px;
     align-items: center;
-    margin: 0;
+    gap: 32px;
+    justify-content: flex-end;
+    align-items: flex-end;
   }
 
   .divider {
     width: calc(100% - 24px);
-    margin: 12px 12px;
+    margin: 0px 12px;
     border-top: 0.7px solid #939393;
     border-bottom: none;
     border-left: none;
     border-right: none;
     background: none;
     height: 0;
+    z-index: 1000;
   }
 
   .copyrightContainer {
@@ -186,6 +182,8 @@
     gap: 8px;
     justify-items: center;
     padding: 16px 0;
+    margin-bottom: 23px;
+
   }
 
   .poweredByContainer {
@@ -195,13 +193,6 @@
   .poweredByText,
   .smartyText {
     text-align: center;
-  }
-
-  .divider {
-    align-self: center;
-    left: 12px;
-    border: 0.7px;
-    border-color: #939393;
   }
 
   .bottomContainer {
@@ -223,7 +214,6 @@
     align-items: flex-start;
     display: flex;
     margin-left: 12px;
-    margin-bottom: 25px;
   }
 
   .link {
